--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
       <artifactId>mybatis-spring</artifactId>
       <version>1.2.2</version>
     </dependency>
+    <!-- aspectjweaver -->
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.8.0</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>demo-one</finalName>
